--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "apexcharts": "^3.7.0",
     "axios": "^0.18.0",
     "chart.js": "^2.8.0",
+    "laravel-mix": "^4.0.16",
     "vue": "^2.6.6",
     "vue-apexcharts": "^1.3.5",
     "vue-chartjs": "^3.4.2",
@@ -21,8 +22,7 @@
     "vue-router": "^3.0.2",
     "vuese": "^1.4.7",
     "vuetify": "^1.5.5",
-    "vuex": "^3.1.0",
-    "laravel-mix": "^1.4.5"
+    "vuex": "^3.1.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.5.0",
